# opensubsonic-rs

./: CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE-APACHE  README.md
.github/workflows/: ci.yml  publish.yml
src/: auth.rs  client.rs  error.rs  lib.rs
src/api/: bookmarks.rs  browsing.rs  chat.rs  internet_radio.rs  jukebox.rs  lists.rs  media_annotation.rs  media_retrieval.rs  mod.rs  playlists.rs  podcast.rs  scanning.rs  searching.rs  sharing.rs  sonic_similarity.rs  system.rs  transcoding.rs  user_management.rs
src/data/: bookmarks.rs  browsing.rs  chat.rs  common.rs  jukebox.rs  lyrics.rs  media.rs  mod.rs  playlists.rs  podcast.rs  radio.rs  scanning.rs  search.rs  sharing.rs  sonic_similarity.rs  transcoding.rs  user.rs
